<?xml version="1.0" encoding="utf-8"?>

<!-- 
	Copyright (c) 2014, Lepidus Development LLC
	All rights reserved.
	
	Redistribution and use in source and binary forms, with or without modification,
	are permitted provided that the following conditions are met:
	
	  Redistributions of source code must retain the above copyright notice, this
	  list of conditions and the following disclaimer.
	
	  Redistributions in binary form must reproduce the above copyright notice, this
	  list of conditions and the following disclaimer in the documentation and/or
	  other materials provided with the distribution.
	
	THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS" AND
	ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED
	WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE
	DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT HOLDER OR CONTRIBUTORS BE LIABLE FOR
	ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES
	(INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES;
	LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON
	ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
	(INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS
	SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
--> 

<resources>
    <string name="app_name">Music2SD</string>
    
    <string name="pref_path">Download Storage Location</string>

    <string name="pref_links">Useful Links</string>
    <string name="pref_music2sd">Music2SD XDA Thread</string>
    <string name="pref_xposed">Xposed Framework XDA Thread</string>
    
    <string name="pref_help">Getting Help</string>
    <string name="pref_sdcard">SD Card Support</string>
    <string name="pref_desc_sdcard">Storage or Free Space not showing up? Send me your information.</string>
    <string name="pref_support">Support</string>
    <string name="pref_desc_support">For any other issues regarding Music2SD.</string>
    
    <string name="internal">Internal Storage</string>
    <string name="device">Device Storage</string>
    <string name="external">External Storage</string>
    <string name="unknown">Unknown Storage</string>
    
    <string name="error">Error</string>
    <string name="root_access">Root access is required to run this application.</string>
    <string name="kitkat_above">This application is not required for Kit Kat and above. Simply open Play Music, go to Settings, and change the Storage Location.</string>
    <string name="xposed_framework">Xposed Framework is required to run this application.</string>
    <string name="download_xposed">Get Xposed</string>
    <string name="unable_search">Unable to search for SD Card.</string>
</resources>
