<?xml version="1.0" encoding="utf-8"?>

<!-- 
	Copyright (c) 2013, Lepidus Development LLC
	All rights reserved.
	
	Redistribution and use in source and binary forms, with or without modification,
	are permitted provided that the following conditions are met:
	
	  Redistributions of source code must retain the above copyright notice, this
	  list of conditions and the following disclaimer.
	
	  Redistributions in binary form must reproduce the above copyright notice, this
	  list of conditions and the following disclaimer in the documentation and/or
	  other materials provided with the distribution.
	
	THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS" AND
	ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED
	WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE
	DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT HOLDER OR CONTRIBUTORS BE LIABLE FOR
	ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES
	(INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES;
	LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON
	ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
	(INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS
	SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
--> 

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
    <Preference
        android:key="path"
		android:title="@string/pref_path" />
    <PreferenceCategory 
        android:title="@string/pref_links">
	    <Preference
	        android:key="music2sd"
	        android:title="@string/pref_music2sd" />
	    <Preference
	        android:key="xposed"
	        android:title="@string/pref_xposed" />
    </PreferenceCategory>
    <PreferenceCategory 
        android:title="@string/pref_help">
	    <Preference
	        android:key="sdcard"
	        android:title="@string/pref_sdcard"
	        android:summary="@string/pref_desc_sdcard" />
	    <Preference
	        android:key="support"
	        android:title="@string/pref_support"
	        android:summary="@string/pref_desc_support" />
    </PreferenceCategory>
</PreferenceScreen>
